[tool.poetry]
name = "repl_python3_discordpy-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.5.1"
dnspython = "^2.1.0"
pastecord = "^1.0.0"
Flask = "^2.0.2"
disnake = "^2.2.2"
yapf = "^0.32.0"
platformdirs = "^2.4.1"
pre-commit = "^2.17.0"
typing-extensions = "^4.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
